# UR10_control_Matlab

./: .gitignore  .mcp.json  README.md  project.md  show_assembly_urdf.m  ur10_gui_control.m  ur10_realtime_sync.m
assembly/: assembly.urdf.xacro
docs/: README.html  index.html
environmental_model/: adjust_block_with_basin_pose_gui.m  assembly_with_block_with_basin.urdf  block_with_basin.urdf  block_with_basin_pose.yaml  rectangular_basin.urdf  solid_block.urdf  ur10_shovel_only.urdf  urdf_viewer.m  world.urdf
real_csv_fit_control/: realCsvFitBuildExecutionTrajectory.m  realCsvFitBuildServoJScript.m  realCsvFitBuildTable.m  realCsvFitCheckLimits.m  realCsvFitCleanupOldInstances.m  realCsvFitCompactPath.m  realCsvFitDefaultConfig.m  realCsvFitDisableAxesInteractions.m  realCsvFitFitTrajectory.m  realCsvFitLoadRobot.m  realCsvFitReadCsv.m  realCsvFitReadLatestUrQActual.m  realCsvFitRenderRobot.m  realCsvFitSendMoveJ.m  realCsvFitSendScript.m  realCsvFitSendStopJ.m  real_csv_fit_gui.m
shovel_with_tcp_rot/shovel_rotate/: .m  package.xml
shovel_with_tcp_rot/shovel_rotate/config/: joint_names_shovel_rotate.yaml
shovel_with_tcp_rot/shovel_rotate/launch/: display.launch  gazebo.launch
shovel_with_tcp_rot/shovel_rotate/meshes/: shovel_base_link.STL
shovel_with_tcp_rot/shovel_rotate/urdf/: shovel_rotate.urdf
test/capsule-8515919/code/inverse_dynamics_solver/: README.md  package.xml
test/capsule-8515919/code/inverse_dynamics_solver/config/: payload_parameters.yaml
test/capsule-8515919/code/inverse_dynamics_solver/include/inverse_dynamics_solver/: inverse_dynamics_solver.h
test/capsule-8515919/code/ur10_inverse_dynamics_solver/: README.md  package.xml  ur10_inverse_dynamics_solver.xml
test/capsule-8515919/code/ur10_inverse_dynamics_solver/config/: franka_hand_payload_parameters.yaml
test/capsule-8515919/code/ur10_inverse_dynamics_solver/include/ur10_inverse_dynamics_solver/: getCoriolisCurrents.h  getCurrents.h  getGravityCurrents.h  getInertiaCurrents.h  getPayloadCoriolisRegressionMatrix.h  getPayloadGravityRegressionMatrix.h  getPayloadInertiaRegressionMatrix.h  getPayloadRegressionMatrix.h  ur10_inverse_dynamics_solver.h
test/capsule-8515919/code/ur10_inverse_dynamics_solver/launch/: test_ur10_inverse_dynamics_solver.py
test/capsule-8515919/code/ur10_inverse_dynamics_solver/src/: getCoriolisCurrents.cpp  getCurrents.cpp  getGravityCurrents.cpp  getInertiaCurrents.cpp  getPayloadCoriolisRegressionMatrix.cpp  getPayloadGravityRegressionMatrix.cpp  getPayloadInertiaRegressionMatrix.cpp  getPayloadRegressionMatrix.cpp  ur10_inverse_dynamics_solver.cpp
test/capsule-8515919/code/ur10_inverse_dynamics_solver/test/: test_ur10_inverse_dynamics_solver.cpp
(+154 files in other folders)
