<package format="2">
  <name>shovel_rotate</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for shovel_rotate</p>
    <p>This package contains the merged base_with_ur10 and shovel_with_3frame model.</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>

