<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inverse_dynamics_solver</name>
  <version>0.0.0</version>
  <description>A library implementing an inverse dynamics solver for serial manipulators</description>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <author email="vipetrone@unisa.it">Vincenzo Petrone</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>ros_extensions_utilities</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
