<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_inverse_dynamics_solver</name>
  <version>0.0.0</version>
  <description>A C++ library implementing the inverse dynamics solver for the UR10 real robot.</description>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <author email="vipetrone@unisa.it">Vincenzo Petrone</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>inverse_dynamics_solver</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros_extensions_utilities</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>rosbag2_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
